# SlovanEngine

./: CMakeLists.txt  INFO  README.md  VERSION
Engine/Core/GL/: GLHeader.h
Engine/Core/Geometry/: Point2D.cpp  Point3D.cpp  Vector.cpp
Engine/Core/Loggers/: FPSLogger.cpp
Engine/Core/Renderer/: Renderer.cpp  Renderer.h
Engine/Core/Shader/: Shader.cpp  Shader.h
Engine/ForUse/GL/: GLHeader.h
Engine/ForUse/Geometry/: Point2D.h  Point3D.h  Vector.h
Engine/ForUse/Loggers/: Logger.h
Engine/ForUse/Objects/: Scene.h
Engine/ForUse/Renderer/: Renderer.h
Engine/PC/Loggers/: Logger.cpp
Engine/PC/Main/: SlovanEngine.cpp
Engine/PC/Renderer/: PCRenderer.cpp  PCRenderer.h
Game/PC/: Main.cpp  Main.h
Game/Scene/Scene0/: Scene0.cpp  Scene0.h
Game/Scene/Scene1/: Scene1.cpp  Scene1.h
SlovanEngine/Android/AssetsIO/: AndroidIOSystem.cpp  AndroidIOSystem.h  ReadAssetFile.cpp  ReadAssetFile.h  ZippedFile.cpp  ZippedFile.h
SlovanEngine/Android/Loggers/: Logger.cpp
SlovanEngine/Android/Renderer/: AndroidRenderer.cpp  AndroidRenderer.h
SlovanEngine/Core/Cameras/: Camera.cpp  Camera.h  Camera2D.cpp  Camera2D.h  FPSCamera.cpp  FPSCamera.h
SlovanEngine/Core/Constants/: Constants.cpp  Constants.h
SlovanEngine/Core/GL/: GLHeader.h
SlovanEngine/Core/GraphicModels/: BasicGeometryShape.cpp  BasicGeometryShape.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Texture.cpp  Texture.h
SlovanEngine/Core/Loggers/: FPSLogger.cpp  FPSLogger.h  Logger.h
SlovanEngine/Core/Objects/: GameObject.cpp  GameObject.h  GameObjectOld.cpp  GameObjectOld.h  Model3D.cpp  Model3D.h
SlovanEngine/Core/Renderer/: Renderer.cpp  Renderer.h
SlovanEngine/Core/Scene/: Scene.h
SlovanEngine/Core/Shader/: Matrices.cpp  Matrices.h  Shader.cpp
SlovanEngine/Core/ShaderPrograms/: AssimpProgram.cpp  AssimpProgram.h  ShaderPrograms.cpp  ShaderPrograms.h  TestProgram.cpp
SlovanEngine/Core/VertexData/: Vertex.h
SlovanEngine/PC/Input/: Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
SlovanEngine/PC/Loggers/: Logger.cpp
SlovanEngine/PC/Renderer/: PCRenderer.cpp  PCRenderer.h
demo/: CMakeLists.txt
demo/src/Android/: AndroidManifest.xml
demo/src/Android/assets/: Resources
demo/src/Android/jni/: Android.mk  Application.mk  slovanEngine.cpp  slovanEngine.h
demo/src/Android/res/layout/: activity_main.xml
demo/src/Android/res/values/: strings.xml
demo/src/Android/src/com/slovanengine/demo/: JNIWrapper.java  MainActivity.java  Renderer.java
demo/src/PC/: Main.cpp
demo/src/Scenes/Scene0/: Scene0.cpp  Scene0.h
demo/src/Scenes/Scene1/: Scene1.cpp  Scene1.h
src/Android/Loggers/: Logger.cpp
src/Core/Cameras/: Camera.cpp  Camera.h
src/Core/Constants/: Constants.cpp  Constants.h
src/Core/Data/: VertexArrayObject.cpp  VertexArrayObject.h
src/Core/Geometry/: Point2D.cpp  Point3D.cpp
src/Core/Loggers/: FPSLogger.cpp
src/Core/Objects/: GameObject.cpp  GameObject.h
src/Core/Renderer/: Renderer.cpp  Renderer.h
src/Core/Shader/: Matrices.cpp  Matrices.h  Shader.cpp  Shader.h
src/Core/ShaderPrograms/: TestProgram.cpp  TestProgram.h
src/Core/VertexData/: VertexArrayObject.cpp  VertexArrayObject.h
src/PC/Loggers/: Logger.cpp
src/PC/Renderer/: PCRenderer.cpp  PCRenderer.h
